--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
       integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI="
       crossorigin="anonymous"
     ></script>
-    <script src="./lib/wrap.js"></script>
+    <script src="/lib/wrap.js"></script>
   </head>
 
   <body>
